<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itsco.edu.calculadora.MainActivity">

    <Button
        android:text="9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_nueve"
        android:layout_alignBaseline="@+id/btn_ocho"
        android:layout_alignBottom="@+id/btn_ocho"
        android:layout_toEndOf="@+id/btn_ocho"
        tools:text="@string/btn9"
        android:onClick="onClickBtn99"
        android:background="@android:color/holo_orange_light" />

    <Button
        android:text="7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_siete"
        android:layout_marginTop="63dp"

        android:layout_alignParentStart="true"
        android:onClick="onClickBtn7"
        tools:text="@string/btn7"
        android:background="@android:color/holo_orange_light" />

    <Button
        android:text="8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ocho"
        android:layout_alignBaseline="@+id/btn_siete"
        android:layout_alignBottom="@+id/btn_siete"
        android:layout_toEndOf="@+id/btn_siete"
        tools:text="@string/btn8"
        android:onClick="onClickBtn8"
        android:background="@android:color/holo_orange_light" />

    <Button
        android:text="+"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_nueve"
        android:layout_toEndOf="@+id/btn_nueve"
        android:id="@+id/btn_suma"
        android:onClick="onClickSuma"
        android:background="@android:color/holo_orange_light" />

    <Button
        android:text="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_siete"
        android:layout_alignEnd="@+id/btn_siete"
        android:layout_marginTop="15dp"
        android:id="@+id/btn_cuatro"
        android:onClick="onClickBtn4"
        tools:text="@string/btn4"
        android:background="@android:color/holo_orange_light" />

    <Button
        android:text="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cinco"
        android:layout_alignBaseline="@+id/btn_cuatro"
        android:layout_alignBottom="@+id/btn_cuatro"
        android:layout_toEndOf="@+id/btn_cuatro"
        android:onClick="onClickBtn5"
        tools:text="@string/btn5"
        android:background="@android:color/holo_orange_light" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_seis"
        android:layout_alignBaseline="@+id/btn_cinco"
        android:layout_alignBottom="@+id/btn_cinco"
        android:layout_toEndOf="@+id/btn_cinco"
        android:text="6"
        android:onClick="onClickBtn6"
        tools:text="@string/btn6"
        android:background="@android:color/holo_orange_light" />

    <Button
        android:text="x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_seis"
        android:layout_toEndOf="@+id/btn_seis"
        android:id="@+id/btn_multi"
        android:onClick="onClickMultiplicacion"
        android:background="@android:color/holo_orange_light" />

    <Button
        android:text="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_cuatro"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/btn_uno"
        android:onClick="onClickBtn1"
        tools:text="@string/btn1"
        android:background="@android:color/holo_orange_light" />

    <Button
        android:text="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_uno"
        android:layout_toEndOf="@+id/btn_uno"
        android:id="@+id/btn_dos"
        android:onClick="onClickBtn2"
        tools:text="@string/btn2"
        android:background="@android:color/holo_orange_light" />

    <Button
        android:text="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_dos"
        android:layout_toEndOf="@+id/btn_dos"
        android:id="@+id/btn_tres"
        android:onClick="onClickBtn3"
        tools:text="@string/btn3"
        android:background="@android:color/holo_orange_light" />

    <Button
        android:text="/"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_tres"
        android:layout_toEndOf="@+id/btn_tres"
        android:id="@+id/btn_division"
        android:onClick="onClickDivision"
        android:background="@android:color/holo_orange_light" />

    <Button
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_uno"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/btn_cero"
        android:layout_toStartOf="@+id/btn_tres"
        android:onClick="onClickBtn0"
        tools:text="@string/btn0"
        android:background="@android:color/holo_orange_light" />

    <Button
        android:text="."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_cero"
        android:layout_marginStart="13dp"
        android:id="@+id/btn_punto"
        android:layout_toStartOf="@+id/btn_division"
        tools:text="@string/btnpunto"
        android:onClick="onClickBtnPunto"
        android:background="@android:color/holo_orange_light" />

    <Button
        android:text="-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_punto"
        android:layout_toEndOf="@+id/btn_punto"
        android:id="@+id/btn_resta"
        android:onClick="onClickResta"
        android:background="@android:color/holo_orange_light" />

    <Button
        android:text="Borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnc"
        android:onClick="onClickBorrar"
        tools:text="@string/btnc"
        android:textColorLink="@android:color/holo_orange_dark"
        android:background="@android:color/holo_orange_light"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/btn_igual"
        android:layout_marginBottom="60dp" />

    <Button
        android:text="="
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_igual"
        android:onClick="onClickIgual"
        android:background="@android:color/holo_orange_light"
        android:layout_alignBaseline="@+id/btnc"
        android:layout_alignBottom="@+id/btnc"
        android:layout_toEndOf="@+id/btn_cero"
        android:layout_marginStart="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_res"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btn_nueve"
        android:layout_alignParentTop="true" />

</RelativeLayout>
